openapi.yaml updated and delete function modifiedg
